fix(docker-jans-auth-server): avoid crashes on Agama serialization